Template - Header - in progress

--- a/DM - Personal Portfolio/themes/dm-theme/prepros.config
+++ b/DM - Personal Portfolio/themes/dm-theme/prepros.config
@@ -929,6 +929,12 @@
     },
     "files": [
       {
+        "file": "assets/scss/functions/functions.scss",
+        "config": {
+          "autoCompile": false
+        }
+      },
+      {
         "file": "assets/scss/style.scss",
         "config": {
           "tasks": {
