Page: Home - in progress
- changes categories section

--- a/DM - Personal Portfolio/themes/dm-theme/prepros.config
+++ b/DM - Personal Portfolio/themes/dm-theme/prepros.config
@@ -359,7 +359,7 @@
         "sourceMap": false
       },
       "postcss-preset-env": {
-        "stage": 2,
+        "stage": 3,
         "browsers": [
           "last 2 versions"
         ],
@@ -937,12 +937,12 @@
       {
         "file": "assets/scss/style.scss",
         "config": {
+          "customOutput": "assets\\css\\style.css",
           "tasks": {
             "minify-css": {
               "enable": true
             }
-          },
-          "customOutput": "assets\\css\\style.css"
+          }
         }
       }
     ]
