Test Htacces on Git - For eliminating ".html"

--- a/content/json/data/data-global-settings.json
+++ b/content/json/data/data-global-settings.json
@@ -19,7 +19,7 @@
         "button-text": "Search",
         "button-placeholder": "Search keywords.."
     },
-    "page-slug-extension": ".html",
+    "page-slug-extension": "",
     "language": {
         "default": "Enlgish",
         "list": [
