Fixing colors at 1 project

--- a/content/json/data/data-posts-projects.json
+++ b/content/json/data/data-posts-projects.json
@@ -5183,7 +5183,7 @@
                 "web"
             ],
             "colors": {
-                "post_color_primary": "#cd412a",
+                "post_color_primary": "#5e2c23",
                 "post_color_secondary": "#ffffff",
                 "post_color_background": "#5e2c23",
                 "post_color_text_on_background": "#ffffff"
