Fix Project Post Data: Denis Marginas - Github Portfolio

--- a/content/json/data/data-posts-projects.json
+++ b/content/json/data/data-posts-projects.json
@@ -2424,8 +2424,7 @@
                     "svg": "php"
                 },
                 {
-                    "name": "TPL",
-                    "svg": "tpl"
+                    "name": "Prepros"
                 }
             ],
             "web_project_status": "Done",
