Update projects JSON fields

--- a/content/json/data/data-posts-projects.json
+++ b/content/json/data/data-posts-projects.json
@@ -1311,7 +1311,7 @@
             ],
             "web_project_status": "Done",
             "project_types": [
-                "presentation website",
+                "online shop",
                 "web content",
                 "web design",
                 "web maintenance"
@@ -1407,7 +1407,7 @@
             ],
             "web_project_status": "Done",
             "project_types": [
-                "presentation website",
+                "online shop",
                 "web content",
                 "web design",
                 "web maintenance"
