Added project: Uppura

--- a/content/json/data/data-posts-projects.json
+++ b/content/json/data/data-posts-projects.json
@@ -7770,7 +7770,7 @@
             "logo": "logo/logo.png",
             "logo_path": "colorplay",
             "logo_type": "png",
-            "description": "Presentation website created using Elementor, transforming the design from Figma into a functional web design. The website's content was developed in 7 languages.",
+            "description": "Presentation website created using Elementor, transforming the design from PSD Templates into a functional web design. The website's content was developed in 7 languages.",
             "categories": [
                 "Web Development Projects"
             ],
@@ -8139,6 +8139,92 @@
                 "post_color_secondary": "#ffffff",
                 "post_color_background": "#ffffff",
                 "post_color_text_on_background": "#81997f"
+            }
+        },
+        "post_content": [
+            "<?php echo renderFeatureHero($post_current_data); ?>",
+            "<?php echo renderSectionWebProject($post_current_data); ?>"
+        ],
+        "layout": "wrapper-layout"
+    },
+    {
+        "file": "project-uppura",
+        "type": "post",
+        "category": "projects",
+        "post_data": {
+            "display": "enable",
+            "post_type": "projects",
+            "media_path": "uppura",
+            "title": "Uppura",
+            "logo": "logo/logo.png",
+            "logo_path": "uppura",
+            "logo_type": "png",
+            "description": "Presentation website created using Elementor, translating the design from Figma into a functional web design.",
+            "categories": [
+                "Web Development Projects"
+            ],
+            "web_url": "uppura.com",
+            "web_platform": [
+                {
+                    "name": "Wordpress",
+                    "svg": "wordpress"
+                }
+            ],
+            "web_technology": [
+                {
+                    "name": "HTML",
+                    "svg": "html"
+                },
+                {
+                    "name": "CSS",
+                    "svg": "css"
+                },
+                {
+                    "name": "JS",
+                    "svg": "js"
+                },
+                {
+                    "name": "SQL",
+                    "svg": "sql"
+                },
+                {
+                    "name": "PHP",
+                    "svg": "php"
+                }
+            ],
+            "web_plugins": [
+                {
+                    "name": "Elementor Website Builder Pro",
+                    "svg": "elementor"
+                }
+            ],
+            "web_project_status": "Done",
+            "project_types": [
+                "presentation website",
+                "web design"
+            ],
+            "project_collaboration": [
+                "Teamwork"
+            ],
+            "project_companies": [
+                "Mentor Marketing Experts"
+            ],
+            "project_contractor": [
+                "Mentor Marketing Experts"
+            ],
+            "employer": "Mentor Marketing Experts",
+            "date": {
+                "date_start": "01.2025",
+                "date_end": "01.2025"
+            },
+            "tags": [
+                "web"
+            ],
+            "colors": {
+                "post_color_primary": "#335e48",
+                "post_color_secondary": "#ffffff",
+                "post_color_background": "#ffffff",
+                "post_color_text_on_background": "#335e48"
             }
         },
         "post_content": [
